--- a/mern-chat-app/frontend/package.json
+++ b/mern-chat-app/frontend/package.json
@@ -23,8 +23,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
     "socket.io-client": "^4.8.1",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -40,6 +39,7 @@
     "globals": "^15.12.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.7.2",
     "vite": "^6.0.1"
   }
